--- a/index.html
+++ b/index.html
@@ -48,18 +48,16 @@
   }
 
   .rail{
-    border-radius: 18px;
-    padding: 14px 12px 18px;
+  border-radius: 18px;
+  padding: 14px 12px 18px;
 
-    /* ✅ Lighter panel */
-    background:
-      linear-gradient(180deg, rgba(255,255,255,.12), rgba(255,255,255,.06)),
-      radial-gradient(900px 240px at 50% 0%, rgba(0,0,0,.22), transparent 72%);
+  /* Brighter panel */
+  background: rgba(255,255,255,0.15);
 
-    border: 1px solid rgba(255,255,255,.14);
-    box-shadow: 0 18px 60px rgba(0,0,0,.45);
-    backdrop-filter: blur(6px);
-  }
+  border: 1px solid rgba(255,255,255,0.3);
+  box-shadow: 0 10px 30px rgba(0,0,0,.25);
+}
+
 
   input, button{
     width: 92%;
