Update background and styling in index.html

--- a/index.html
+++ b/index.html
@@ -17,22 +17,19 @@
   * { box-sizing: border-box; }
 
   body{
-    margin:0;
-    min-height:100vh;
-    display:flex;
-    justify-content:center;
+  margin:0;
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
 
-    /* ✅ Brighter, less “dark vignette” */
-    background:
-      radial-gradient(1200px 650px at 50% -10%, rgba(255,255,255,.22), transparent 58%),
-      radial-gradient(900px 700px at 50% 115%, rgba(0,0,0,.28), transparent 62%),
-      repeating-radial-gradient(circle at 30% 20%, rgba(255,255,255,.045) 0 2px, transparent 2px 9px),
-      linear-gradient(180deg, var(--felt1), var(--felt2));
+  /* MUCH brighter background */
+  background: linear-gradient(180deg, #5fd3a4, #2fbf8f);
 
-    color: var(--chalk);
-    font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    padding: 18px 12px 28px;
-  }
+  color: #ffffff;
+  font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  padding: 18px 12px 28px;
+}
+
 
   .frame{
     width:min(560px, 100%);
